# lwelib

./: .gitignore  CMakeLists.txt
cmake/: Dependencies.cmake
core/: CMakeLists.txt
core/include/core/: ntt.h  poly.h
core/src/: ntt.c
crypto/: CMakeLists.txt
crypto/include/lml/: mlwe-fast.h
crypto/src/: mlwe-fast.c
docs/: main.tex
docs/chapters/: chosen_methods.tex  conclusion.tex  implementation.tex  introduction.tex  performance_evaluation.tex  theoretical_background.tex
gfx/: CMakeLists.txt
gfx/include/gfx/: Renderer.h  buffer.h  shader.h
gfx/src/: buffer.cpp  shader.cpp
tests/: CMakeLists.txt
